# cc-oci-runtime

./: .gitignore  .pullapprove.yml  .travis-setup.sh  .travis.yml  .ycm_extra_conf.py  CONTRIBUTING.md  DESIGN.rst  Doxyfile  INSTALL_DOCKER.rst  Makefile.am  Makefile.in  NEWS  README.rst  TODO  aclocal.m4  autogen.sh  commit_id  config.h.in  configure  configure.ac  packages.json  versions.txt
.ci/: ci-build.sh  ci-common.sh  ci-configure.sh  ci-go-static-checks.sh  ci-pre-checks.sh  ci-setup.sh  ci-teardown.sh
.travis/: travis-build.sh  travis-setup.sh  travis-teardown.sh
data/: cc-agent.service  cc-bootchart.conf  cc-oci-runtime.sh.in  cc-sriovdownscript.sh  container-workload.service  container.target  genfile.sh  hypervisor.args.in  kernel-cmdline  opt-rootfs-sys.mount  run-bats.sh.in  vm.json.in
data/obs-packaging/: README.rst
data/obs-packaging/attr-dev/: attr-dev.spec
data/obs-packaging/cc-oci-runtime/: README.md  _service  _service-template  cc-oci-runtime.dsc  cc-oci-runtime.dsc-template  cc-oci-runtime.spec  cc-oci-runtime.spec-template  debian.changelog  debian.control  debian.postinst  debian.rules  debian.series  update_commit_id.patch  update_commit_id.patch-template  update_runtime.sh
data/obs-packaging/clear-containers-image/: .gitignore  LICENSE  README.md  clear-containers-image.spec  clear-containers-image.spec-template  clear-containers-image_13280-15.debian.tar.xz  clear-containers-image_13280-15.dsc  update_image.sh
data/obs-packaging/clear-containers-selinux/: README.md  clear-containers-selinux-0.1  clear-containers-selinux.spec
data/obs-packaging/elfutils-devel/: elfutils-devel.spec
data/obs-packaging/linux-container/: .gitignore  0101-msleep-warning.patch  0102-cpuidle-skip-synchronize_rcu-on-single-CPU-systems.patch  0103-sysrq-skip-synchronize_rcu-if-there-is-no-old-op.patch  0104-fbcon-enable-no-blink-by-default.patch  0105-vmstats-wakeups.patch  0106-pci-probe.patch  0107-cgroup.patch  0108-smpboot-reuse-timer-calibration.patch  0109-perf.patch  0110-pci-probe-identify-known-devices.patch  0111-init-no-wait-for-the-known-devices.patch  0112-ksm-wakeups.patch  0113-init-do_mounts-recreate-dev-root.patch  0114-xattr-allow-setting-user.-attributes-on-symlinks-by-.patch  0201-crypto-allow-testmgr-to-be-skipped.patch  0202-silence-Power-down-msg.patch  0203-fs-9p-fix-create-unlink-getattr-idiom.patch  0204-rdrand.patch  0205-reboot.patch  0206-no-early-modprobe.patch  0207-pci-guest-kernel-set-pci-net-class-bar-to-4.patch  0208-Show-restart-information-using-info-log.patch  README.md  cmdline  config  cve-2016-8632.patch  linux-container.spec  linux-container.spec-template  linux-container_4.9.4-53.debian.tar.xz  linux-container_4.9.4-53.dsc  linux-container_4.9.4.orig.tar.xz  update_kernel.sh
data/obs-packaging/qemu-lite/: _service  configure.patch  debian.changelog  debian.control  debian.rules  (+2 more)
documentation/: Get-Bootchart-metrics.md  Installing-Clear-Containers-on-Centos-7.md  Installing-Clear-Containers-on-ClearLinux.md  Installing-Clear-Containers-on-Fedora-25.md  Installing-Clear-Containers-on-Fedora.md  Installing-Clear-Containers-on-RHEL.md  Installing-Clear-Containers-on-Ubuntu.md  Quickstart-Clear-Containers-in-a-Ubuntu-VM.md  Using-OVS-DPDK-and-COR.md  Using-SRIOV-and-COR.md  Using-VPP-and-COR.md  architecture-diagrams.odp  architecture.md
installation/: curl-autoconf-archive.sh  install_clear_image.sh  install_clear_kernel.sh  installation-setup.sh  rhel-setup.sh
m4/: ax_code_coverage.m4  ax_valgrind_check.m4
proxy/: README.md  cc-proxy.service.in  cc-proxy.socket.in  protocol.go  protocol_test.go  proxy.go  proxy_test.go  syscall.go  vm.go
proxy/api/: api.go  client.go  common_test.go  fdpassing.go  fdpassing_test.go  protocol.go  protocol_test.go
shim/: README.md  log.c  log.h  shim.c  shim.h  utils.c  utils.h
src/: annotation.c  annotation.h  command.c  command.h  common.h  events.c  events.h  hypervisor.c  hypervisor.h  json.c  json.h  logging.c  logging.h  main.c  mount.c  mount.h  namespace.c  namespace.h  netlink.c  netlink.h  network.c  network.h  networking.c  networking.h  oci-config.c  oci-config.h  oci.c  oci.h  pod.c  pod.h  priv.c  priv.h  process.c  process.h  proxy.c  proxy.h  runtime.c  runtime.h  semver.c  semver.h  (+6 more)
src/commands/: attach.c  checkpoint.c  create.c  delete.c  events.c  exec.c  help.c  kill.c  list.c  pause.c  ps.c  restore.c  resume.c  run.c  start.c  state.c  stop.c  update.c  version.c
src/spec_handlers/: annotations.c  hooks.c  linux.c  mounts.c  platform.c  process.c  root.c  vm.c
tests/: annotation_test.c  hypervisor_test.c  json_test.c  logging_test.c  mount_test.c  namespace_test.c  network_test.c  oci-config_test.c  oci_test.c  pod_test.c  priv_test.c  process_test.c  runtime_test.c  semver_test.c  state_test.c  test_common.c  test_common.h  util_test.c
tests/data/: annotations-null-key+value.json  container_redis.json  linux-no-cgroupsPath.json  linux.json  mounts.json  process-invalid-relative-cwd.json  process-no-args-cwd.json  process-no-cwd.json  process.json  state-mounts-no-mount-destination.json  state-mounts-no-mount-directory_created.json  state-no-annotations.json  state-no-bundlePath.json  state-no-console-path.json  state-no-console-socket.json  state-no-console.json  state-no-id.json  state-no-mounts.json  state-no-ociVersion.json  state-no-processPath.json  state-no-proxy-ctlSocket.json  state-no-proxy-ioSocket.json  state-no-vm-object.json  state.json
tests/functional/: README.rst  common.bash.in  exec.bats  help.bats  kill.bats  pause.bats  run-functional-tests.sh.in  start.bats  state.bats  version.bats
tests/helpers/: test-campaign.sh
tests/integration/: README.md
tests/lib/: send_results.sh.in  test-common.bash  test-common.bash.in  test-crio.bats.in
tests/metrics/: README.md  collect_mem_consmd.sh  map_mem.sh  run_docker_metrics  smem_monitor.sh
tests/mock/: hyperstart.go  misc.go
tests/spec_handlers/: annotations_test.c  hooks_test.c  linux_test.c  mounts_test.c  platform_test.c  process_test.c  root_test.c  vm_test.c
(+66 files in other folders)
